--- a/project/Makefile
+++ b/project/Makefile
@@ -27,10 +27,12 @@ SRCS = $(shell ls *.cpp)
 OBJS = $(SRCS:%.cpp=$(OBJDIR)/%.o)
 
 INCLUDE_DIRS = -I. $(EXTRA_INCLUDES)
+INCLUDE_DIRS += -I./lib/include
 
 LIB_DIRS = $(EXTRA_LIBS)
+LIB_DIRS += -L./lib
 
-LIBS = -Xlinker --start-group  -Xlinker -ldl  -Xlinker -lX11 -Xlinker \
+LIBS += -Xlinker --start-group -Xlinker -ldl  -Xlinker -lX11 -Xlinker \
 	-lXext  -Xlinker -lpthread  -Xlinker -lz  -Xlinker -ljpeg  -Xlinker \
 	-lpng  -Xlinker -lzip  -Xlinker -lSDL -Xlinker -lvrg3d  -Xlinker \
 	-lavutil  -Xlinker -lavformat  -Xlinker -lavcodec  -Xlinker -lGLG3Dd \
@@ -39,7 +41,7 @@ LIBS = -Xlinker --start-group  -Xlinker -ldl  -Xlinker -lX11 -Xlinker \
 
 all: yurtcraft
 
-yurtcraft: obj/vrfrontend.o obj/main.o obj/vrcamera.o obj/sampleapp.o
+yurtcraft:  obj/vrfrontend.o obj/main.o obj/vrcamera.o obj/sampleapp.o obj/aab.o obj/chunk.o obj/chunkfactory.o obj/collisions.o obj/cylinder.o obj/ellipsoid.o obj/entity.o obj/graphics.o obj/mcchunk.o obj/mcchunkfactory.o obj/mcworld.o obj/noise.o obj/obj.o obj/player.o obj/skybox.o obj/triangle.o obj/voxelsystem.o obj/world.o
 	$(CPP) $(LDFLAGS) -o yurtcraft $^ $(LIB_DIRS) $(LIBS)
 
 
